<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical">

    <!-- 标题栏 -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:visibility="gone"
        android:background="#003366">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/black_back"
            android:drawablePadding="2dp"
            android:text="返回"
            android:textSize="16dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20px"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            tools:text="战绩"
            android:layout_centerInParent="true"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_win_chips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textColor="@color/orange"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            tools:text="10000"
            android:layout_marginRight="20dp"
            />
    </RelativeLayout>


    <!-- 战绩总记录-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <!-- 牌局数-->
        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/game_record_text_medium_size"
                android:text="@string/all_games"/>

            <TextView
                android:id="@+id/all_games"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:textSize="@dimen/game_record_text_small_size"
                android:text="@string/all_games"/>

        </LinearLayout>

        <!-- 入池率 && 其中胜率-->
         <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center">

                <com.yijian.dzpoker.view.OpenRingProgressView
                    android:id="@+id/open_ring_progress"
                    android:layout_width="160dp"
                    android:layout_height="160dp" />

            </LinearLayout>

        <!-- 总手数-->
        <RelativeLayout
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp">

            <TextView
                android:id="@+id/all_rounds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="right"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                tools:text="10000"
                android:textSize="@dimen/game_record_text_small_size" />

            <TextView
                android:id="@+id/tv_rounds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/all_rounds"
                android:gravity="right"
                android:text="@string/all_rounds"
                android:textColor="@color/white"
                android:textSize="@dimen/game_record_text_medium_size" />

        </RelativeLayout>
    </LinearLayout>

    <!-- 赛事战绩-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/games_record"
        android:textColor="@color/white"
        android:layout_marginTop="5dp"
        android:textSize="@dimen/game_record_text_medium_size"
        android:gravity="center"
        android:background="@color/background"/>

    <!-- 分类赛事战绩总数-->
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal">

        <!-- SNG-->
        <TableRow >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="5dp"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/all_sng"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shop_goldicon_bg"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    tools:text="0场"
                    android:textSize="@dimen/game_record_text_medium_size"
                    android:text="@string/rounds_subtype_gams"
                    android:textColor="@color/white"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="5dp"
                    android:text="SNG"
                    android:textSize="@dimen/game_record_text_medium_size"
                    android:textColor="@color/blue"/>

            </LinearLayout>

            <!-- MT-SNG-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="5dp"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/all_mt_sng"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shop_goldicon_bg"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    tools:text="0场"
                    android:textSize="@dimen/game_record_text_medium_size"
                    android:text="@string/rounds_subtype_gams"
                    android:textColor="@color/white"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="5dp"
                    android:text="MT-SNG"
                    android:textSize="@dimen/game_record_text_medium_size"
                    android:textColor="@color/blue"/>

            </LinearLayout>


            <!-- MTT-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="5dp"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/all_mtt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shop_goldicon_bg"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    tools:text="0场"
                    android:textSize="@dimen/game_record_text_medium_size"
                    android:text="@string/rounds_subtype_gams"
                    android:textColor="@color/white"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="5dp"
                    android:layout_gravity="center_horizontal"
                    android:text="MTT"
                    android:textSize="@dimen/game_record_text_medium_size"
                    android:textColor="@color/blue"/>
            </LinearLayout>
        </TableRow>
    </TableLayout>

    <!-- 牌局信息 && 牌铺记录 -->
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="10dp">

        <TableRow>
        <!-- 牌局信息-->
        <LinearLayout
            android:id="@+id/lv_rounds_link"
            android:layout_width="0.0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:clickable="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="10dp"
            android:background="@color/black"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/rounds_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/information_ico"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/rounds_icon"
                    android:textColor="@color/white"
                    android:layout_marginTop="14dp"
                    android:text="@string/rounds_link_info"
                    android:textSize="@dimen/game_record_text_medium_size"/>

                <TextView
                    android:id="@+id/rounds_link_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/rounds_icon"
                    android:textSize="10dp"
                    android:text="@string/rounds_link_desc"
                    android:textColor="@color/gray"/>
            </LinearLayout>
        </LinearLayout>

            <!-- 牌谱信息-->
            <LinearLayout
                android:id="@+id/lv_brands_link"
                android:layout_width="0.0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:clickable="true"
                android:background="@color/black"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/brand_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/record2_ico"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/rounds_icon"
                        android:textColor="@color/white"
                        android:layout_marginTop="14dp"
                        android:text="@string/brands_link_info"
                        android:textSize="@dimen/game_record_text_medium_size"/>

                    <TextView
                        android:id="@+id/brands_link_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/rounds_icon"
                        android:textSize="10dp"
                        android:text="@string/brands_link_desc"
                        android:textColor="@color/gray"/>
                </LinearLayout>
        </LinearLayout>

        </TableRow>
    </TableLayout>

    </LinearLayout>

